--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-size: 80%;
     overflow-x: hidden;
 }
 
@@ -502,6 +502,15 @@ span {
 .education-content .content p {
     font-size: 1.5rem;
     padding-top: .5rem;
+}
+
+.education-content a {
+    color: white;    
+}
+
+.education-content a:hover{
+    color: #01c38d;
+    transition: 0.2s;
 }
 
 .skills {
@@ -1040,7 +1049,7 @@ section:nth-child(odd) .animate.scroll,
   
 
 /* Estilos para tablets */
-@media only screen and (min-height: 601px) and (max-height: 991px) and (orientation: landscape){
+@media only screen and (min-height: 601px) and (max-height: 991px) and (max-width:400px) and (orientation: landscape){
     .home {
         height: 150vh;
         position: relative;
@@ -1048,7 +1057,7 @@ section:nth-child(odd) .animate.scroll,
 
 }
 
-@media only screen and (min-height: 300px) and (max-height: 600px) {
+@media only screen and (min-height: 300px) and (max-height: 600px) and (orientation: landascape){
     html {
         font-size: 50%;
     }
