--- a/styles.css
+++ b/styles.css
@@ -412,6 +412,175 @@ span {
     background: var(--second-bg-color);
 }
 
+/* About page */
+
+.about-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background: radial-gradient(79.43% 251.58% at 23.18% 73.07%, #0142a0 0, #0f133a 44.41%, #101034 56.43%, #141034 69.58%, #301436 100%, #411958 0);
+    padding-bottom: 6rem;
+}
+
+.heading {
+    position: relative;
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+span {
+    color: var(--main-color);
+}
+
+.about-image {
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.about-image img {
+    width: 90%;
+    border-radius: 50%;
+    border: .2rem solid var(--main-color);
+}
+
+.about-image .circle-spin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    border-top: .2rem solid var(--second-bg-color);
+    border-bottom: .2rem solid var(--second-bg-color);
+    border-left: .2rem solid var(--main-color);
+    border-right: .2rem solid var(--main-color);
+    animation: aboutSpinner 8s linear infinite;
+}
+
+.about-page-content {
+    text-align: left;
+}
+
+.about-page-content h3 {
+    position: relative;
+    display: inline-block;
+    font-size: 2.6rem;
+}
+
+.about-page-content p {
+    position: relative;
+    font-size: 1.6rem;
+    margin: 2rem 0 3rem;
+}
+
+.btn-box.btns {
+    display: inline-block;
+    width: 15rem;
+}
+
+.btn-box.btns a::before {
+    background: var(--second-bg-color);
+}
+/*  */
+
+
+/* blog-pages */
+.blog-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 2rem;
+    background: radial-gradient(79.43% 251.58% at 23.18% 73.07%, #0142a0 0, #0f133a 44.41%, #101034 56.43%, #141034 69.58%, #301436 100%, #411958 0);
+    padding-bottom: 6rem;
+}
+
+.heading {
+    position: relative;
+    font-size: 5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+span {
+    color: var(--main-color);
+}
+
+.blog-image {
+    position: relative;
+    width: 25rem;
+    height: 25rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+
+.blog-image img {
+    width: 90%;
+    border: .2rem solid var(--main-color);
+}
+
+
+
+.blog-page-content {
+    text-align: left;
+}
+
+.blog-page-content h3 {
+    position: relative;
+    display: inline-block;
+    font-size: 2.6rem;
+}
+
+.blog-page-content h2 {
+    position: relative;
+    display: inline-block;
+    font-size: 1.9rem;
+    margin-top: 1.5rem;
+}
+
+.blog-page-content p {
+    position: relative;
+    font-size: 1.6rem;
+    margin-left: 1rem;
+}
+
+.blog-page-content img {
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.blog-page-content iframe {
+    width: 80%;
+    height: auto;
+}
+.btn-box.btns {
+    display: inline-block;
+    width: 15rem;
+}
+
+.btn-box.btns a::before {
+    background: var(--second-bg-color);
+}
+
+
 .education {
     display: flex;
     justify-content: center;
@@ -1049,15 +1218,23 @@ section:nth-child(odd) .animate.scroll,
   
 
 /* Estilos para tablets */
-@media only screen and (min-height: 601px) and (max-height: 991px) and (max-width:400px) and (orientation: landscape){
+@media only screen and (min-height: 801px) and (max-height: 991px) and /* (max-width:400px) */ and (orientation: landscape){
     .home {
-        height: 150vh;
+        height: 130vh;
         position: relative;
     }
 
 }
 
-@media only screen and (min-height: 300px) and (max-height: 600px) and (orientation: landascape){
+@media only screen and (min-height: 601px) and (max-height: 800px) /* and (max-width:400px) */ and (orientation: landscape){
+    .home {
+        height: 140vh;
+        position: relative;
+    }
+
+}
+
+@media only screen and (min-height: 300px) and (max-height: 600px)/*  and (orientation: landascape) */{
     html {
         font-size: 50%;
     }
