--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ html {
     overflow-x: hidden;
 }
 
+#bp-widget, .bp-widget-web {
+    z-index: 9999 !important;
+}
+
 
 body {
     background-color: var(--bg-color);
