--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,12 @@
 }
 
 :root {
-    --bg-color: #191e29;
-    --second-bg-color: #132d46;
-    --text-color: #fff;
-    --main-color: #01c38d;
+    --bg-color: #f6faff;
+    --second-bg-color: #070955;
+    --text-color: rgb(0, 0, 0);
+    --second-text-color: rgb(255, 255, 255);
+    --main-color: #05079c;
+    --second-main-color: #7167fc;
 }
 
 html {
@@ -49,7 +51,7 @@ body {
 }
 
 .header.sticky {
-    background: var(--bg-color);
+    background: white;
 }
 
 .logo {
@@ -65,7 +67,7 @@ body {
 
 .navbar a {
     font-size: 1.7rem;
-    color: var(--text-color);
+    color: rgb(215, 230, 250);
     font-weight: 500;
     margin-left: 3.5rem;
     transition: .3s;
@@ -94,8 +96,8 @@ section {
     align-items: center;
     padding: 0 9%;
     /* background: url(images/bg.jpg) no-repeat; */
-    background: radial-gradient(79.43% 251.58% at 23.18% 73.07%, #0142a0 0, #0f133a 44.41%, #101034 56.43%, #141034 69.58%, #301436 100%, #411958 0);
-
+    /* background: radial-gradient(79.43% 251.58% at 23.18% 73.07%, #0142a0 0, #0f133a 44.41%, #101034 56.43%, #141034 69.58%, #301436 100%, #411958 0);
+ */
     /*  background-size: cover;
     background-position: center; */
 }
@@ -105,18 +107,22 @@ section {
     width: 50vw;
     margin-left: 25px;
     justify-content: end;
+    /* background-color: #0142a0; */
+    
 }
 
 .avatar {
-    width: 40vw;
-    height: 40vw; 
+    width: 35vw;
+    height: 35vw; 
     border-radius: 50%;
     opacity: 1; /* Inicialmente, la imagen es completamente visible */
     transition: opacity 0.2s ease; /* Cambia la opacidad durante 2 segundos */
+    box-shadow: 6px 6px 10px -1px rgba(0, 0, 0, 0.15),
+    -10px -10px 25px -8px rgba(255, 255, 255, 0.7);
 }
 
 .home-content {
-    max-width: 60rem;
+    max-width: 55rem;
     z-index: 99;
 }
 
@@ -135,6 +141,7 @@ section {
 .home-content .text-animate {
     position: relative;
     width: 30.5rem;
+    
 }
 
 .home-content .text-animate h3 {
@@ -148,6 +155,7 @@ section {
     background-position: -34rem 0;
     animation: homeBgText 6s linear infinite;
     animation-delay: 2s;
+    font-style: italic;
 }
 
 .home.show-animate .home-content .text-animate h3 {
@@ -178,15 +186,19 @@ section {
     position: relative;
     font-size: 1.6rem;
     margin: 2rem 0 4rem;
+    text-align: justify;
 }
 
 
 .btn-box {
     position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width: 34.5rem;
     height: 5rem;
+
+    margin-top: 10%;
+
 
 }
 
@@ -197,20 +209,22 @@ section {
     align-items: center;
     width: 25rem;
     height: 100%;
-    border: .2rem solid var(--main-color);
-    background-color: var(--main-color);
-    border-radius: .8rem;
+    /* border: .2rem solid var(--main-color); */
+    /* background-color: var(--main-color); */
+    border-radius: 10rem;
     font-size: 1.8rem;
     font-weight: 600;
     letter-spacing: .1rem;
-    color: var(--bg-color);
+    color: var(--second-main-color);
     z-index: 1;
     overflow: hidden;
     transition: .5s;
+    box-shadow: 6px 6px 10px -1px rgba(199, 196, 204, 0.15),
+    -6px -6px 10px -1px rgba(215, 218, 228, 0.7);
 }
 
 .btn-box .btn:hover {
-    color: var(--main-color);
+    color: var(--bg-color);
 }
 
 .btn-box .btn:nth-child(2) {
@@ -234,7 +248,7 @@ section {
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--bg-color);
+    background: var(--second-bg-color);
     z-index: -1;
     transition: 0.5s;
 }
@@ -359,6 +373,7 @@ section {
     gap: 2rem;
     background: var(--second-bg-color);
     padding-bottom: 6rem;
+    color: var(--second-text-color)
 }
 
 .heading {
@@ -370,6 +385,7 @@ section {
 
 span {
     color: var(--main-color);
+
 }
 
 .about-image {
@@ -450,7 +466,10 @@ span {
 }
 
 span {
-    color: var(--main-color);
+    color: var(--second-main-color) !important;
+    border: .3 solid #01c38d;
+    text-shadow: #01c38d;
+
 }
 
 .about-image {
@@ -468,7 +487,7 @@ span {
 .about-image img {
     width: 90%;
     border-radius: 50%;
-    border: .2rem solid var(--main-color);
+    border: .3rem solid var(--second-main-color);
 }
 
 .about-image .circle-spin {
@@ -479,10 +498,10 @@ span {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    border-top: .2rem solid var(--second-bg-color);
-    border-bottom: .2rem solid var(--second-bg-color);
-    border-left: .2rem solid var(--main-color);
-    border-right: .2rem solid var(--main-color);
+    border-top: .3rem solid var(--second-bg-color);
+    border-bottom: .3rem solid var(--second-bg-color);
+    border-left: .3rem solid var(--second-main-color);
+    border-right: .3rem solid var(--second-main-color);
     animation: aboutSpinner 8s linear infinite;
 }
 
@@ -647,7 +666,7 @@ span {
     left: -1.1rem;
     width: 2rem;
     height: 2rem;
-    background: var(--main-color);
+    background: var(--second-main-color);
     border-radius: 50%;
 }
 
@@ -675,11 +694,15 @@ span {
     width: 100%;
 }
 
+.education-content .content:hover {
+    color: white;
+}
+
 
 
 .education-content .content .year {
     font-size: 1.5rem;
-    color: var(--main-color);
+    color: var(--second-main-color);
     padding-bottom: .5rem;
 }
 
@@ -696,12 +719,13 @@ span {
     padding-top: .5rem;
 }
 
+
 .education-content a {
-    color: white;    
+    color: var(--second-main-color);    
 }
 
 .education-content a:hover{
-    color: #01c38d;
+    color: var(--bg-color);
     transition: 0.2s;
 }
 
@@ -709,6 +733,7 @@ span {
     min-height: auto;
     padding-bottom: 7rem;
     background: var(--second-bg-color);
+    color: var(--bg-color);
 }
 
 .skills h2 {
@@ -740,7 +765,7 @@ span {
 
 .skills-box .skills-content {
     position: relative;
-    border: .2rem solid var(--main-color);
+    border: .2rem solid var(--second-main-color);
     border-radius: .6rem;
     padding: .5rem 1.5rem;
     z-index: 1;
@@ -754,7 +779,7 @@ span {
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--bg-color);
+    background: var(--second-main-color);
     z-index: -1;
     transition: .5s;
 }
@@ -773,14 +798,15 @@ span {
     justify-content: space-between;
 }
 
-.skills-content.progress h3 span {
-    color: var(--text-color);
+.skills-content .progress h3 span{
+    color: var(--bg-color) !important;
 }
+
 
 .skills-content .progress .bar {
     height: 2.5rem;
     border-radius: 6.rem;
-    border: .2rem solid var(--main-color);
+    border: .2rem solid var(--bg-color);
     padding: .5rem;
     margin: 1rem 0;
 }
@@ -789,7 +815,7 @@ span {
     display: block;
     height: 100%;
     border-radius: .3rem;
-    background: var(--main-color);
+    background: var(--bg-color);
 }
 
 .skills-column:nth-child(1) .skills-content .progress:nth-child(1) .bar span {
@@ -913,6 +939,7 @@ span {
     flex-wrap: wrap;
     padding: 2rem 9%;
     background: var(--second-bg-color);
+    color: var(--bg-color)
 }
 
 .footer-text,
@@ -1060,6 +1087,10 @@ section:nth-child(odd) .animate.scroll,
     .avatar{
         width: 0;
         height: 0;
+    }
+
+    .home-content p{
+        text-align: left;
     }
 }
 
@@ -1259,7 +1290,7 @@ section:nth-child(odd) .animate.scroll,
           min-height: 150vh;
           position: relative;
       }
-  
+ 
       .home-sci {
           width: 110px;
       }
