--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 }
 
 html {
-    font-size: 81%;
+    font-size: 80%;
     overflow-x: hidden;
 }
 
@@ -61,6 +61,10 @@ body {
     font-weight: 600;
 }
 
+.logo:hover {
+    color: var(--second-main-color);
+
+}
 .navbar {
     position: relative;
 }
@@ -1183,7 +1187,7 @@ section:nth-child(odd) .animate.scroll,
 
 @media (max-width: 520px) {
     html {
-        font-size: 50%;
+        font-size: 60%;
     }
 
     .home-content h1 {
@@ -1305,7 +1309,8 @@ section:nth-child(odd) .animate.scroll,
   
 
 /* Estilos para tablets */
-@media only screen and (min-height: 801px) and (max-height: 991px) and /* (max-width:400px) */ (orientation: landscape){
+@media only screen and (min-height: 801px) and (max-height: 980px) and /* (max-width:400px) */ (orientation: landscape){
+    
     .home {
         height: 130vh;
         position: relative;
